aks-cluster/05-Ingress-SSL-with-LetsEncrypt/kube-manifests/03-Ingress-SSL-Resource/01-Ingress-SSL.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ssl
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt    
spec:
  rules:
    - host: demoapp1.kubekon.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-app1-clusterip-service
                port: 
                  number: 80
    - host: demoapp2.kubekon.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-app2-clusterip-service
                port: 
                  number: 80                         
  tls:
  - hosts:
    - demoapp1.kubekon.info
    secretName: demoapp1-kubekon-secret           
  - hosts:
    - demoapp2.kubekon.info
    secretName: demoapp2-kubekon-secret
